# ppi_net_builder

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml
ppi_net_builder/: __init__.py
ppi_net_builder/src/: data.py  fetch.py  graph.py
ppinet/: __init__.py
ppinet/src/: data.py  graph.py
ppipy/: __init__.py
ppipy/src/: data.py  graph.py
tests/: README.md  __init__.py  conftest.py  test_data.py  test_fetch.py  test_graph.py
