[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppi-net-builder"
version = "0.1.0"
description = "Protein-Protein Interaction (PPI) network construction and analysis using STRING-db (https://string-db.org/) in Python."
readme = "README.md"
authors = [{ name = "Yu-Te Lin", email = "qwerty239qwe@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["protein-protein interaction network", "PPI", "enrichment analysis", "stringdb", "string"]
dependencies = [
    "pandas",
    "requests",
    "tqdm",
    "igraph",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/qwerty239qwe/ppi_net_builder"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"ppi_net_builder/__init__.py" = [
    '^__version__ = "{version}"$',
]